auto-test/tests/chapter_15/invalid_types/sub_ptr_from_int.c
int main(void)
{
    int *x = 0;
    
    
    return 0 - x == 0;
}